# diffusion-deep-dream-research

./: .env.example  .gitignore  .gitmodules  LICENSE  Makefile  README.md  condaenv.eqv2shq_.requirements.txt  environment.yml  environment.yml.tpl  justfile  main.py  pyproject.toml  requirements.in  result_paths.txt  ruff.toml  setup.py
conf/: config.yaml
conf/datasets/: unlearn_canvas.yaml
conf/infrastructure/: athena.yaml  local.yaml
conf/models/: SAeUron.yaml  saeuron.yaml  stable_diffusion_v_1_4.yaml  style50.yaml
conf/stage/: provision.yaml
conf/stages/: capture.yaml  deep_dream.yaml  plots.yaml  prior.yaml  provision.yaml  representation.yaml  timestep_analysis.yaml
conf/transformation_robustness/: level_0.yaml  level_1.yaml  level_2.yaml  level_3.yaml
demo_app/: app.py
diffusion_deep_dream_research/: __init__.py  dataset.py  features.py  models.py  plots.py  root.py
diffusion_deep_dream_research/config/: config_schema.py
diffusion_deep_dream_research/config/general/: general_config.py  models.py
diffusion_deep_dream_research/core/data/: index_dataset.py  unique_prompt_dataset.py
diffusion_deep_dream_research/core/hooks/: base_hook.py  capture_hook.py  steering_hook.py
diffusion_deep_dream_research/core/model/: hooked_model_wrapper.py  modified_diffusion_pipeline_adapter.py
diffusion_deep_dream_research/core/regularisation/: latent_augumenter.py
diffusion_deep_dream_research/core/regularisation/gradient_transforms/: base_gradient_transform.py  gradient_preconditioning.py  gradient_smoothing.py
diffusion_deep_dream_research/core/regularisation/penalties/: base_penalty.py  moment_penalty.py  range_penalty.py  total_variation_penalty.py
diffusion_deep_dream_research/model/: hooked_model_wrapper.py  modified_diffusion_pipeline_adapter.py
diffusion_deep_dream_research/model/hooks/: base_hook.py  capture_hook.py  steering_hook.py
diffusion_deep_dream_research/modeling/: predict.py  train.py
diffusion_deep_dream_research/stages/: plgaszokalski.code-workspace  provision.py  s00_provision.py  s01_capture.py  s02_timestep_analysis.py  s03_plots.py  s04_prior.py  s05_deep_dream.py  s06_representation.py
diffusion_deep_dream_research/utils/: capture_results_reading_utils.py  config_utils.py  deep_dream_results_reading_utils.py  logging.py  path_utils.py  prior_results_reading_utils.py  torch_utils.py
docs/: mkdocs.yml
docs/docs/: index.md
exploration/: README.md
exploration/02-lucent/: 02-lucent.ipynb
exploration/03-entangled-deep-dream/: 03-entangled-deep-dream.ipynb  03_entangled_deep_dream_colab.ipynb  entangled_dreaming.py  old-03-entangled-deep-dream-with-lucent.ipynb
exploration/04-entangled-steering/: entangled_steering.py
exploration/05-entangled-prior-deep-dream/: 00_entangled_prior_deep_dream.py  01_entangled_deep_dream_prior_heavy_regularisation.py
exploration/06-entangled-timestep-analysis/: 00_entangled_activation_median_magintude_timestep_analysis.py  01_entangled_top_k_activation_timestep_analisys.py  all_timesteps.pkl  timestep_topk_storage.pkl
exploration/07-sae-deep-dream/: sae_deep_dream.py
notebooks/: hooked_model_wrapper_example.ipynb  test.ipynb  test.py
notebooks/00-exploration/02-lucent/: 02-lucent.ipynb
notebooks/00-exploration/03-entangled-deep-dream/: 03_entangled_deep_dream_colab.ipynb
notebooks/exploration/01-stable-diffusion-1-5-archtecture/: 01-stable-diffusion-1-5-architecture.ipynb  unet_architecture
scripts/: app.py  inspector.py  setup-plg.sh  start-interactive-session.sh
tests/: test_hooks.py
tests/hooks/: test_capture_hook.py  test_steering_hook.py
tests/mocks/: mock_sae.py
