[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diffusion_deep_dream_research"
version = "0.0.1"
description = "The goal of this project is to develop a method to generate monosemantic dDeepDream representations of neurons in diffusion models."
authors = [
  { name = "Adam Szokalski" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "diffusers>=0.35.2",
    "graphviz>=0.21",
    "graphviz-anywidget>=0.8.0",
    "ipython",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "onnx>=1.19.1",
    "onnxscript>=0.5.6",
    "opencv-python>=4.11.0.86",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torch-lucent",
    "torchinfo>=1.8.0",
    "torchview>=0.2.7",
    "torchvision>=0.24.1",
    "tqdm",
    "transformers>=4.57.3",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["diffusion_deep_dream_research"]
include = ["pyproject.toml", "diffusion_deep_dream_research/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["diffusion_deep_dream_research"]
force-sort-within-sections = true

[tool.uv.sources]
torch-lucent = { git = "https://github.com/aszokalski/lucent.git", rev = "custom-device-support" }

