[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diffusion_deep_dream_research"
version = "0.0.1"
description = "The goal of this project is to develop a method to generate monosemantic dDeepDream representations of neurons in diffusion models."
authors = [
  { name = "Adam Szokalski" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "diffusers>=0.35.2",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "graphviz>=0.21",
    "graphviz-anywidget>=0.8.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "imageio>=2.37.2",
    "ipython",
    "ipywidgets>=8.1.8",
    "jaxtyping>=0.3.4",
    "jupyter>=1.1.1",
    "jupyterlab",
    "kornia>=0.7.0,<0.8.0",
    "lightning>=2.6.0",
    "loguru",
    "matplotlib",
    "mkdocs",
    "natsort>=8.4.0",
    "notebook",
    "numpy",
    "onnx>=1.19.1",
    "onnxscript>=0.5.6",
    "opencv-python>=4.11.0.86",
    "pandas",
    "pip",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "safetensors>=0.7.0",
    "scikit-learn",
    "scipy>=1.16.3",
    "simple-parsing>=0.1.7",
    "submitit>=1.5.4",
    "torch>=2.9.1",
    "torch-lucent>=0.1.7",
    "torchinfo>=1.8.0",
    "torchview>=0.2.7",
    "torchvision>=0.24.1",
    "tqdm",
    "transformers>=4.57.3",
    "typer",
    "torch-lucent @ git+https://github.com/aszokalski/lucent.git@custom-device-support"
]
requires-python = "~=3.12.0"

[tool.setuptools.packages.find]
where = ["."]  # Look in the root directory
# IMPORTANT: Add the name you want to use for importing the submodule here
include = ["diffusion_deep_dream_research", "submodules"]

# 2. Map the import name to the actual directory
[tool.setuptools.package-dir]
"diffusion_deep_dream_research" = "diffusion_deep_dream_research"
"submodules" = "submodules"

[tool.ruff]
line-length = 99
src = ["diffusion_deep_dream_research"]
include = ["pyproject.toml", "diffusion_deep_dream_research/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["diffusion_deep_dream_research"]
force-sort-within-sections = true
